--- a/assignments/Assignment1.Rmd
+++ b/assignments/Assignment1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment1"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
@@ -8,6 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## R Markdown
+
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
