--- a/Week1_clean.Rmd
+++ b/Week1_clean.Rmd
@@ -4,12 +4,11 @@ output: html_notebook
 ---
 ```{r}
 # Use tidyverse staples filter, arrange, group_by, and summarize. 
-
 sales <- readRDS(here::here("data/sales.rds"))
 
 "1. What is the earlier lease commencement date and where are these flats located?"
 ans1 <- sales %>% 
-  filter(lease_commence_date == sales %>% select(matches("lease_commence_date")) %>% min() ) %>%
+  filter(lease_commence_date == min(sales$lease_commence_date) ) %>%
   group_by(town) %>% 
   summarise_at(vars(lease_commence_date),funs(mean(.,na.rm=TRUE))) %>% 
   select(matches("town") | matches("lease_commence_date"))
@@ -19,9 +18,10 @@ toString(ans1)
 
 "2. What are the largest HDB flats in Singapore? How much did they sell for?"
 ans2 <- sales %>% 
-  filter(floor_area_sqm == sales %>% select(matches("floor_area_sqm")) %>% max() ) %>% 
+  filter(floor_area_sqm == max(sales$floor_area_sqm) ) %>% 
   select(matches("town") | matches( "resale_price"))
 toString(ans2)
+
 ```
 ```{r}
 "3. What is the most expensive flat in Punggol?"
@@ -40,7 +40,7 @@ ans3_chk <- sales %>%
 "4. Which town has, on average, the largest flats (by floor area)?"
 ans4 <- sales %>% 
   group_by(town) %>% summarise_at(vars(floor_area_sqm),funs(mean(.,na.rm=TRUE))) %>%
-  filter( floor_area_sqm == sales %>% group_by(town) %>% summarise_at(vars(floor_area_sqm),funs(mean(.,na.rm=TRUE))) %>% select(matches("floor_area_sqm")) %>% max() ) %>% 
+  filter( floor_area_sqm == sales %>% group_by(town) %>% summarise_at(vars(floor_area_sqm),funs(mean(.,na.rm=TRUE))) %>% max(sales$floor_area_sqm) ) %>% 
   select(matches("town") | matches( "floor_area_sqm"))
 toString(ans4) 
 ```
