--- a/assignments/Block4_mini-assignment.Rmd
+++ b/assignments/Block4_mini-assignment.Rmd
@@ -14,61 +14,61 @@ library(ggplot2)
 library(infer)
 sales <- readRDS(here::here("data/sales.rds"))
 
-mu <- sales %>% 
+mu <- sales %>%
   summarize(stat = mean(resale_price))
-
 mu
 ```
 
 ```{r}
-sales %>% 
-  sample_n(100) %>% 
+sales %>%
+  sample_n(100) %>%
   summarize(stat = mean(resale_price))
 ```
 ```{r}
 sample_mean <- function(data, size = 500) {
-  data %>% 
-    sample_n(size) %>% 
+  data %>%
+    sample_n(size) %>%
     summarize(stat = mean(resale_price))
 }
 
 sampled_means <- rerun(500, sample_mean(sales)) %>% bind_rows()
 
-sampled_means %>% 
-  ggplot(aes(x = stat)) + geom_histogram() +
-  geom_vline(xintercept=mu$stat)
+sampled_means %>%
+  ggplot(aes(x = stat)) +
+  geom_histogram() +
+  geom_vline(xintercept = mu$stat)
 ```
 
 ```{r}
-#sample of 500 (from the entire database)
+# sample of 500 (from the entire database)
 sales_sample <- sales %>%
   sample_n(500)
 
 # mean of the sample
-x_bar <- sales_sample %>% 
+x_bar <- sales_sample %>%
   summarize(stat = mean(resale_price))
 x_bar
 
 # same with different library
-sales_sample %>% 
+sales_sample %>%
   specify(response = resale_price) %>%
   calculate(stat = "mean")
 ```
 
 ```{r}
-# Bootstrapping 
-bootstrapped_resale_price <- sales_sample %>% 
-  specify(response = resale_price) %>% 
-  generate(reps = 500) %>% 
+# Bootstrapping
+bootstrapped_resale_price <- sales_sample %>%
+  specify(response = resale_price) %>%
+  generate(reps = 500) %>%
   calculate(stat = "mean")
 
-bootstrapped_resale_price %>% 
+bootstrapped_resale_price %>%
   visualise() +
   geom_vline(xintercept = x_bar$stat)
 ```
 
 ```{r}
-bootstrapped_resale_price %>% 
+bootstrapped_resale_price %>%
   get_ci()
 ```
 ### Exercise 1: Using RStudio’s help panel, find out how to use the standard error method with get_ci. Do you find the same values?
@@ -89,44 +89,44 @@ bootstrapped_resale_price %>%
 ```
 
 ```{r}
-# Confidence intervals for subsets: 
-#x_bar_mp_all <- sales %>% 
-#  filter(town == "MARINE PARADE") %>% 
+# Confidence intervals for subsets:
+# x_bar_mp_all <- sales %>%
+#  filter(town == "MARINE PARADE") %>%
 #  summarize(stat = mean(resale_price))
 
-#x_bar_mp
+# x_bar_mp
 ```
 ```{r}
 
-sales %>% 
-  #filter(floor_area_sqm == 67) %>% 
-  filter(town == "MARINE PARADE") %>% 
+sales %>%
+  # filter(floor_area_sqm == 67) %>%
+  filter(town == "MARINE PARADE") %>%
   View()
 
 
-#sample of 500 (from the entire database)
+# sample of 500 (from the entire database)
 sales_sample_mp <- sales %>%
-  filter(town == "MARINE PARADE") %>% 
+  filter(town == "MARINE PARADE") %>%
   sample_n(100) # Error: `size` must be less or equal than 485 (size of data), set `replace` = TRUE to use sampling with replacement.
 
 # mean of the sample
-x_bar_mp <- sales_sample_mp %>% 
+x_bar_mp <- sales_sample_mp %>%
   summarize(stat = mean(resale_price))
 x_bar_mp
 
 
 
-bootstrapped_resale_price_mp <- sales_sample_mp %>% 
-  filter(town == "MARINE PARADE") %>% 
-  specify(response = resale_price) %>% 
-  generate(reps = 500) %>% 
+bootstrapped_resale_price_mp <- sales_sample_mp %>%
+  filter(town == "MARINE PARADE") %>%
+  specify(response = resale_price) %>%
+  generate(reps = 500) %>%
   calculate(stat = "mean")
 
-bootstrapped_resale_price_mp %>% 
+bootstrapped_resale_price_mp %>%
   visualise() +
   geom_vline(xintercept = x_bar$stat)
 
-bootstrapped_resale_price_mp %>% 
+bootstrapped_resale_price_mp %>%
   get_ci()
 ```
 
@@ -138,8 +138,6 @@ town_means <- sales %>%
   group_by(town) %>%
   summarise(mean = mean(resale_price))
 town_means
-
-
 ```
 
 ```{r}
@@ -157,55 +155,52 @@ ggplot() +
 ```
 
 ```{r}
-bootstrapped_resale_price_qt <- sales %>% 
-  filter(town == "QUEENSTOWN") %>% 
-  specify(response = resale_price) %>% 
-  generate(reps = 100) %>% 
+bootstrapped_resale_price_qt <- sales %>%
+  filter(town == "QUEENSTOWN") %>%
+  specify(response = resale_price) %>%
+  generate(reps = 100) %>%
   calculate(stat = "mean")
 
-bootstrapped_resale_price_qt %>% 
+bootstrapped_resale_price_qt %>%
   get_ci()
 ```
 ```{r}
 # test the significance of the difference more formally with infer
 
-mean_diff <- sales %>% 
-  filter(town == "MARINE PARADE" | town == "QUEENSTOWN") %>% 
-  specify(formula = resale_price ~ town) %>% 
+mean_diff <- sales %>%
+  filter(town == "MARINE PARADE" | town == "QUEENSTOWN") %>%
+  specify(formula = resale_price ~ town) %>%
   calculate(stat = "diff in means", order = c("QUEENSTOWN", "MARINE PARADE"))
 mean_diff
-
 ```
 
 ```{r}
 # We then generate a set of sampled datasets. But instead of doing a simple bootstrap, we generate each sample based on the null hypothesis, namely that there is no difference between the mean of the two towns.
 
-null_distribution <- sales %>% 
-  filter(town == "MARINE PARADE" | town == "QUEENSTOWN") %>% 
-  specify(formula = resale_price ~ town) %>% 
-  hypothesize(null = "independence") %>% 
-  generate(reps = 500, type = "permute") %>% 
+null_distribution <- sales %>%
+  filter(town == "MARINE PARADE" | town == "QUEENSTOWN") %>%
+  specify(formula = resale_price ~ town) %>%
+  hypothesize(null = "independence") %>%
+  generate(reps = 500, type = "permute") %>%
   calculate(stat = "diff in means", order = c("QUEENSTOWN", "MARINE PARADE"))
 
-null_distribution %>% 
+null_distribution %>%
   visualise(bins = 100) +
   shade_p_value(obs_stat = mean_diff, direction = "greater")
-
-
 ```
 
 ```{r}
-null_distribution %>% 
+null_distribution %>%
   get_pvalue(obs_stat = mean_diff, direction = "greater")
 ```
 
 ```{r}
-sales %>% 
-  filter(town == "MARINE PARADE" | town == "QUEENSTOWN") %>% 
-  specify(formula = resale_price ~ town) %>% 
+sales %>%
+  filter(town == "MARINE PARADE" | town == "QUEENSTOWN") %>%
+  specify(formula = resale_price ~ town) %>%
   # hypothesize(null = "independence") %>% # disable the null hypothesis
   generate(reps = 500, type = "bootstrap") %>% # set type to bootstrap
-  calculate(stat = "diff in means", order = c("QUEENSTOWN", "MARINE PARADE")) %>% 
+  calculate(stat = "diff in means", order = c("QUEENSTOWN", "MARINE PARADE")) %>%
   get_ci()
 ```
 
@@ -226,5 +221,3 @@ sales %>%
 ```{r}
 
 ```
-
-
